# agentic-job-app-deck

./: .apikey.example  .gitignore  README.md  config.yaml  pyproject.toml  setup.py
bank/: achievements.yaml  cl.yaml  experience.yaml  profile.yaml  projects.yaml  skills.yaml
bank/edu_experience_contents/: e2.yaml  e3.yaml
bank/work_experience_contents/: w1.yaml  w2.yaml
bank_template/: achievements.yaml  profile.yaml  projects.yaml  skills.yaml
bank_template/edu_experience_contents/: e2.yaml  e3.yaml
bank_template/work_experience_contents/: w1.yaml  w2.yaml
cl_bank/: content.yaml  stumbling_block.yaml
cl_bank_template/: content.yaml  stumbling_block.yaml
data/: jd.txt  profile.yaml
src/: __init__.py  run.py
src/adapters/: llm_openai.py  render_jinja.py  storage_yaml.py
src/agents/: __init__.py  assembler.py  cover_letter_exporter.py  cover_letter_writer.py  critic.py  exporter.py  jd_parser.py  ranker.py
src/app/: graph.py  graph_cl.py  graph_cv.py  registry.py  services.py
src/domain/: contracts.py  state.py  taxonomy.py
src/infra/: config.py  logging.py
src/utils/: edu_experience_ranker.py  skill_experience_ranker.py  work_experience_ranker.py
templates/: autocv.tex  cl.tex  cl.tex.j2  resume.tex.j2
